corrected layout issue with DB step
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/tao/trunk@11991 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/install/css/installation_main.css
+++ b/install/css/installation_main.css
@@ -231,7 +231,7 @@ form > ul > li {
 	position: relative;
 	width:270px;
 	display: inline-block;
-	margin:15px 10px 0 0;
+	margin:13px 10px 0 0;
 }
 
 form > ul > li >*{
